# OpenGL.Sandbox

./: .gitignore  .gitmodules  .project  CMakeLists.txt  README.MD
internal/Adder/: adder.cpp  adder.hpp
internal/SandBox.Bob/: CMakeLists.txt
internal/SandBox.Richard/: CMakeLists.txt
internal/SandBox.Richard/src/: main.cpp
internal/glad/: CMakeLists.txt
internal/glad/include/glad/: glad.h
internal/glad/src/: glad.c
scripts/: archiveExternal.sh  build.sh  configure.sh
src/: main.cpp
